--- a/App/Admin/View/Login/login.html
+++ b/App/Admin/View/Login/login.html
@@ -13,7 +13,7 @@ body{background-image:url(/public/admin/images/adminbg.jpg);background-size:cove
     <h1>后台登录</h1>
     <div class="adming_login_border">
         <div class="admin_input">
-            <form action="{:U('Login/checkLogin')}" method="post">
+            <form action="{:U('/Login/checkLogin')}" method="post">
                 <ul class="admin_items">
                     <li>
                         <label for="user">用户名：</label>
